# base

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.agents/skills/automation/: SKILL.md
.agents/skills/decision-record/: SKILL.md
.agents/skills/delivery/: SKILL.md
.agents/skills/evidence-review/: SKILL.md
.agents/skills/fix/: SKILL.md
.agents/skills/migrate/: SKILL.md
.agents/skills/pickup/: SKILL.md
.agents/skills/research/: SKILL.md
.agents/skills/writing/: SKILL.md
.base/: base.toml  history.jsonl
.base/canon/agents/: builder.md  reviewer.md
.base/knowledge/: adapter-surfaces.md  tokenize-before-you-judge.md
.base/state/: current-work  handoff.md
.claude/: settings.json
.claude/agents/: builder.md  delivery-analyst.md  delivery-auditor.md  delivery-implementer.md  reviewer.md
.codex/: hooks.json
.codex/agents/: builder.toml  delivery-analyst.toml  delivery-auditor.toml  delivery-implementer.toml  reviewer.toml
.codex/rules/: base.rules
.github/: copilot-instructions.md
.github/agents/: builder.agent.md  delivery-analyst.agent.md  delivery-auditor.agent.md  delivery-implementer.agent.md  reviewer.agent.md
.github/hooks/: base.json
.github/prompts/: automation.prompt.md  build.prompt.md  delivery.prompt.md  fix.prompt.md  migrate.prompt.md  research.prompt.md  writing.prompt.md
docs/: ADAPTERS.md  CANON.md  DECISIONS.md  README.md  SPEC.md  UPGRADING.md
src/: canon.rs  cli.rs  config.rs  ingest.rs  integrity.rs  lib.rs  lock.rs  main.rs  pack.rs  process.rs  render.rs  templates.rs
src/commands/: adopt.rs  approve.rs  check.rs  hook.rs  ingest.rs  init.rs  log.rs  mod.rs  pack.rs  state.rs  sync.rs  verify.rs  work.rs
tests/: cli.rs  spec.rs
(+149 files in other folders)
