[package]
name = "base-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Define agentic systems once and compile them to coding-agent harnesses"
license = "MIT"
repository = "https://github.com/smithdak/base"
include = [
    "src/**",
    "tests/**",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
    "docs/**",
]

[[bin]]
name = "base"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
shell-words = "1.1"
toml = "0.9"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.20"
